--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-div{
+div, nav{
     border: black 1px solid;
-    margin: 5px;
+}
+
+.headerProfileImg{
+    max-width: 100px;
+    max-height: 100px;
 }
